--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "noUnusedLocals": true
+    "noUnusedLocals": false
   },
   "include": [
     "src"
